--- a/Blume/ctOS/index.html
+++ b/Blume/ctOS/index.html
@@ -57,11 +57,11 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Welcome</a>
                     </li>
-                    <li><a href="#about">Who we are</a>
+                    <li><a href="ctos-who">Who we are</a>
                     </li>
-                    <li><a href="#contact">What we do</a>
+                    <li><a href="ctos-what">What we do</a>
                     </li>
-                    <li class="dropdown">
+                    <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#">Action</a>
@@ -77,14 +77,14 @@
                             <li><a href="#">One more separated link</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../navbar/">Blume</a>
+                    <li><a href="blume-home">Blume</a>
                     </li>
-                    <li><a href="../navbar-static-top/">Who is Blume?</a>
+                    <li><a href="blume-whois">Who is Blume?</a>
                     </li>
-                    <li class="active"><a href="./">What we do</a>
+                    <li><a href="blume-what">What we do</a>
                     </li>
                 </ul>
             </div>
@@ -96,11 +96,10 @@
 
         <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron">
-            <h1>Navbar example</h1>
-            <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-            <p>To see the difference between static and fixed top navbars, just scroll.</p>
+            <h1>Welcome</h1>
+            <p>Allan please add description</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
+                <a class="btn btn-lg btn-primary" href="#" role="button">Allan please add link</a>
             </p>
         </div>
 
