--- a/Blume/ctOS/index.html
+++ b/Blume/ctOS/index.html
@@ -25,9 +25,7 @@
     <!-- Custom styles for this template -->
     <link href="css/blume.fixednav.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
+
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
@@ -62,11 +60,11 @@
                     <li><a href="ctos-what">What we do</a>
                     </li>
                     <!--<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">//WHO WE REALLY ARE<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a>
+                            <li><a href="#">BACK MARKET TRADERS</a>
                             </li>
-                            <li><a href="#">Another action</a>
+                            <li><a href="#">STEALING PERSONAL DATA</a>
                             </li>
                             <li><a href="#">Something else here</a>
                             </li>
@@ -80,11 +78,13 @@
                     </li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="blume-home">Blume</a>
+                    <li>
+                        <a href="#"></a>
                     </li>
-                    <li><a href="blume-whois">Who is Blume?</a>
+                    <li>
+                        <a href="#"></a>
                     </li>
-                    <li><a href="blume-what">What we do</a>
+                    <li><a href="blume-home">Created by Blume</a>
                     </li>
                 </ul>
             </div>
@@ -97,9 +97,9 @@
         <!-- Main component for a primary marketing message or call to action -->
         <div class="jumbotron">
             <h1>Welcome</h1>
-            <p>Allan please add description</p>
+            <p>This is ctOS, one of the best Smart City&trade; management softwares today.</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="#" role="button">Allan please add link</a>
+                <a class="btn btn-lg btn-primary" href="#" role="button">Learn More &raquo;</a>
             </p>
         </div>
 
@@ -111,7 +111,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
