--- a/index.html
+++ b/index.html
@@ -98,126 +98,143 @@
             </center>
         </div>
     </noscript>
-
-    <div class="container ">
-
-        <div class="masthead ">
-            <center>
-                <h3 class="text-muted "><a href="topsecret.html "> </a></h3>
-            </center>
-            <ul class="nav nav-justified ">
-
-                <li class="active "><a href="# ">Home</a>
-                </li>
-                <li><a href="http://stormyjet.github.io/blog.html ">Blog</a>
-                </li>
-                <li><a href="http://twitter.com/stormyjet ">Twitter</a>
-                </li>
-                <!-- This line to be replaced with proper source-->
-                <li><a href="https://github.com/stormyjet/stormyjet.github.io ">Source</a>
-                </li>
-                <li><a href="http://meteorgame.github.io ">Meteor Game</a>
-                </li>
-                <li><a href="http://mcfs.github.io ">MCFS</a>
-                </li>
-
-
-            </ul>
-        </div>
-
-        <!--<li class="active "><a href="# ">Test</a></li>
-          <li><a href="http://twitter.com/stormyjet ">Twitter</a></li>
-          
-          <!--<li><a href="http://meteorgame.github.io ">Meteor Game</a></li>
-          <li><a href="http://mcfs.github.io ">MCFS</a></li>-->
-
-
-        <center>
-            <p class="nocss ">Whoa there.
-                <br>Looks like the page didn't load properly.
-                <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
-                <br>If you're smart, the CSS didn't load, so this happened.</p>
-
-        </center>
-
-        <!-- Jumbotron -->
+    <!--Nav Begins Here-->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div>
-                <script>
-                    //candy loader
-                    var request = new XMLHttpRequest();
-                    request.onload = function() {
-                        // open the candies
-                        var fileContent = this.responseText;
-                        // split into lines
-                        var fileContentLines = fileContent.split('\n');
-                        // get a random candy
-                        var randomLineIndex = Math.floor(Math.random() * fileContentLines.length);
-                        // store the candy for use
-                        var randomLine = fileContentLines[randomLineIndex];
-
-                        // we grab the div id and insert a candy
-                        document.getElementById('candy').innerHTML = randomLine;
-                    };
-                     //were grabbing the candies from here.
-                    request.open('GET', 'http://stormyjet.com/indexcandy.txt', true);
-                    request.send();
-                </script>
-
-                <div class="jumbotron ">
-                    <p style="font-size: 750%;">Stormy's Website</p>
-                    <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
-                    <br>
-                    <br>
-                    <hr>
-                    <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
-                        <br>
-                        <a href="cancer.html">The free online cancer checker</a>
-                        <br>
-                        <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
-                        <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
-                        <br>
-                    </p>
-                    <p style="font-size: 10pt">You can refresh to change the tagline but you didn't hear that from me.</p>
-                </div>
-                <hr>
-                <!-- Example row of columns -->
-                <div class="row ">
-                    <div class="col-lg-4 ">
-                        <h2>Meteor Game</h2>
-                        <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                        <p><a class="btn btn-primary " href="http://meteorgame.github.io " role="button ">View details &raquo;</a>
-                        </p>
-                    </div>
-                    <div class="col-lg-4 ">
-                        <h2>MCFS</h2>
-                        <p class="text-danger ">Update: April Fools :)</p>
-                        <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia</p>
-                        <p><a class="btn btn-primary " href="http://mcfs.github.io " role="button ">View details &raquo;</a>
-                        </p>
-                    </div>
-                    <div class="col-lg-4 ">
-                        <h2>Blog</h2>
-                        <p>I have one of those.</p>
-                        <p><a class="btn btn-primary " href="network.html " role="button ">Go now &raquo;</a>
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Site footer -->
-                <div class="footer ">
-                    <p>
-                        Powered by <a href="network.html ">sNet</a>. StormyJet.com is <a href="open.html">open source</a>.
-                    </p>
-                </div>
-
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
             </div>
-            <!-- /container -->
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a>
+                    </li>
+                    <li><a href="blog.html">Blog</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="cancer.html">Cancer Checker</a>
+                            </li>
+                            <li><a href="pokecrate/index.html">Pokecrate</a>
+                            </li>
+                            <li><a href="http://twitter.com/stormyjet">Twitter</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Technical Stuff</li>
+                            <li><a href="open.html">Open Source Docs</a>
+                            </li>
+                            <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <!--<li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>-->
+                    <li><a href="MeteorGame/index.html">Meteor Game</a>
+                    </li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+    <!--Nav ends here-->
+    <center>
+        <p class="nocss ">Whoa there.
+            <br>Looks like the page didn't load properly.
+            <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
+            <br>If you're smart, the CSS didn't load, so this happened.</p>
+
+    </center>
+
+    <!-- Jumbotron -->
+    <div class="container">
+        <div>
+            <script>
+                //candy loader
+                var request = new XMLHttpRequest();
+                request.onload = function() {
+                    // open the candies
+                    var fileContent = this.responseText;
+                    // split into lines
+                    var fileContentLines = fileContent.split('\n');
+                    // get a random candy
+                    var randomLineIndex = Math.floor(Math.random() * fileContentLines.length);
+                    // store the candy for use
+                    var randomLine = fileContentLines[randomLineIndex];
+
+                    // we grab the div id and insert a candy
+                    document.getElementById('candy').innerHTML = randomLine;
+                };
+                 //were grabbing the candies from here.
+                request.open('GET', 'http://stormyjet.com/indexcandy.txt', true);
+                request.send();
+            </script>
+
+            <div class="jumbotron ">
+                <p style="font-size: 750%;">Stormy's Website</p>
+                <div id="candy" style="font-size: 200%;">I can't load any Candies! Something went wrong!</div>
+                <br>
+                <br>
+                <hr>
+                <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
+                    <br>
+                    <a href="cancer.html">The free online cancer checker</a>
+                    <br>
+                    <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
+                    <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
+                    <br>
+                </p>
+                <p style="font-size: 10pt">You can refresh to change the tagline but you didn't hear that from me.</p>
+            </div>
+            <hr>
+            <!-- Example row of columns -->
+            <div class="row ">
+                <div class="col-lg-4 ">
+                    <h2>Meteor Game</h2>
+                    <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
+                    <p><a class="btn btn-primary " href="http://meteorgame.github.io " role="button ">View details &raquo;</a>
+                    </p>
+                </div>
+                <div class="col-lg-4 ">
+                    <h2>MCFS</h2>
+                    <p class="text-danger ">Update: April Fools :)</p>
+                    <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia</p>
+                    <p><a class="btn btn-primary " href="http://mcfs.github.io " role="button ">View details &raquo;</a>
+                    </p>
+                </div>
+                <div class="col-lg-4 ">
+                    <h2>Blog</h2>
+                    <p>I have one of those.</p>
+                    <p><a class="btn btn-primary " href="network.html " role="button ">Go now &raquo;</a>
+                    </p>
+                </div>
+            </div>
+
+            <!-- Site footer -->
+            <div class="footer ">
+                <p>
+                    Powered by <a href="network.html ">sNet</a>. StormyJet.com is <a href="open.html">open source</a>.
+                </p>
+            </div>
+
+        </div>
+        <!-- /container -->
 
 
-            <!-- Bootstrap core JavaScript
+        <!-- Bootstrap core JavaScript
     ================================================== -->
-            <!-- Placed at the end of the document so the pages load faster -->
+        <!-- Placed at the end of the document so the pages load faster -->
 </body>
 
 </html>
