--- a/open.html
+++ b/open.html
@@ -144,20 +144,59 @@
         <br>
         <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>justified-nav.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
 
-            <div class="masthead ">
-                <center>
-                    <h3 class="text-muted "><a href="topsecret.html">UniNav Example</a></h3>
-                </center>
-                <ul class="nav nav-justified ">
-
-                    <li class="active"><a href="#">Active</a>
+            <!--Nav Begins Here-->
+            <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="topsecret.html">Example</a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="#">Normal</a>
+                            </li>
+                            <li class="active"><a href="#">Normal</a>
+                            </li>
+                            <li class="disabled"><a href="#">Disabled</a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">1</a>
+                                    </li>
+                                    <li><a href="#">2</a>
+                                    </li>
+                                    <li><a href="#">3</a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Header</li>
+                                    <li><a href="#">1</a>
+                                    </li>
+                                    <li><a href="#">2</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <!--<li>
+                        <a href="#"></a>
                     </li>
-                    <li><a href="#">Normal</a>
-                    </li>
-                    <li class="disabled"><a href="#">Disabled</a>
-                    </li>
-                </ul>
+                    <li>
+                        <a href="#"></a>
+                    </li>-->
+                            <li><a href="#">Right</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--/.nav-collapse -->
+                </div>
             </div>
+            <!--Nav ends here-->
             <br>Also, copy the most current UniNav code which will always be on the first page. It is also good measure to add a line break after UniNav
             <hr>
             <h3>NoCSS</h3>
