--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -60,7 +60,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">Home</a>
                     </li>
-                    <li class="active"><a href="../blog.html">Blog</a>
+                    <li><a href="../blog.html">Blog</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
@@ -95,8 +95,10 @@
         </div>
     </div>
     <!--Nav ends here-->
+    <br>
+    <br>
 
-    <div class="hero-unit">
+    <div class="jumbotron">
         <!--<center><h1><h1>Meteor Game</h1></h1>-->
         <h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3>
         <br>
