--- a/open.html
+++ b/open.html
@@ -145,7 +145,7 @@
         <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>justified-nav.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
 
             <!--Nav Begins Here-->
-            <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
