--- a/open.html
+++ b/open.html
@@ -169,6 +169,7 @@
     <h3>Using UniNav</h3>
     <br>
     <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>justified-nav.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
+        <br>For this example to work correctly, some things were removed, if getting nav from here, make sure you add <kbd>navbar-fixed-top</kbd> into the first div class.
 
         <!--Nav Begins Here-->
         <div class="navbar navbar-default" role="navigation">
@@ -209,14 +210,14 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#">Right</a>
+                        </li>
                         <!--<li>
                         <a href="#"></a>
                     </li>
-                    <li>
-                        <a href="#"></a>
-                    </li>-->
                         <li><a href="#">Right</a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
@@ -233,7 +234,9 @@
         <span class="label label-warning"><strong>Warning</strong> |  Never link to CSS like this: stormyjet.com/css/{cssfile}. It increases load times.</span>
     </p>
     <hr>
-    <div class="page-header">Submissions</div>
+    <div class="page-header">
+        <h3>Submissions</h3>
+    </div>
     <p>Yay! You finally finished editing your code and you are ready for it to be reviewed (and maybe accepted!). But wait, where do you go to do that
         <br>Step 1: Go to <a href="https://github.com/stormyjet/stormyjet.github.io/issues/new">this page.</a>
         <br>2: Paste in all of your code
