--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -98,7 +98,7 @@
     <br>
     <br>
 
-    <div class="jumbotron">
+    <div class="jumbotron ">
         <!--<center><h1><h1>Meteor Game</h1></h1>-->
         <h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3>
         <br>
@@ -201,5 +201,8 @@
         }(document, 'script'));
     </script>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/docs.min.js"></script>
 
 </html>
