--- a/blog.html
+++ b/blog.html
@@ -123,5 +123,8 @@
         <iframe width="100%" height="100%" frameborder="0" src="http://stormyswords.tumblr.com" />
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/docs.min.js"></script>
 
 </html>
