--- a/open.html
+++ b/open.html
@@ -144,136 +144,136 @@
             <p>This is the page that explains the HTML code of this site, what is expected of you if you make changes, and how to submit</p>
 
             </p>
+
+
+
+
+            <div class="page-header">
+                <h1>Creating your Code</h1>
+            </div>
+            <p>Every single page of this website is equipped with special NoCSS coding. It detects in real time if the CSS loaded properly. Give it a whirl if you want.
+                <br>Another thing that is generally universal throughout all of this coding is the UniNav, these are part of sNet, and should not be modified.
+                <br>All code is generally annotated, and is pretty easy to figure out if it is not.
+            </p>
+            <hr>
         </div>
-
-
-
         <div class="page-header">
-            <h1>Creating your Code</h1>
+            <h1>What you cannot do</h1>
         </div>
-        <p>Every single page of this website is equipped with special NoCSS coding. It detects in real time if the CSS loaded properly. Give it a whirl if you want.
-            <br>Another thing that is generally universal throughout all of this coding is the UniNav, these are part of sNet, and should not be modified.
-            <br>All code is generally annotated, and is pretty easy to figure out if it is not.
+        <p><span class="label label-danger">Do not, under ANY circumstances claim to be StormyJet.com</span>
+            <br>Generally that is it, if you pass off my code as yours, you are a meanie and also you should NOT do that (I use a lot of Bootstrap's Code). Also please do not link to the GitHub address, only link to StormyJet.com. NEVER link to stormyjet.github.io
         </p>
-        <hr>
-    </div>
-    <div class="page-header">
-        <h1>What you cannot do</h1>
-    </div>
-    <p><span class="label label-danger">Do not, under ANY circumstances claim to be StormyJet.com</span>
-        <br>Generally that is it, if you pass off my code as yours, you are a meanie and also you should NOT do that (I use a lot of Bootstrap's Code). Also please do not link to the GitHub address, only link to StormyJet.com. NEVER link to stormyjet.github.io
-    </p>
-    <div class="page-header">
-        <h1>Now that we have that out of the way....</h1>
-    </div>
-    <h3>Using UniNav</h3>
-    <br>
-    <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>justified-nav.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
-        <br>For this example to work correctly, some things were removed, if getting nav from here, make sure you add <kbd>navbar-fixed-top</kbd> into the first div class.
+        <div class="page-header">
+            <h1>Now that we have that out of the way....</h1>
+        </div>
+        <h3>Using UniNav</h3>
+        <br>
+        <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>justified-nav.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
+            <br>For this example to work correctly, some things were removed, if getting nav from here, make sure you add <kbd>navbar-fixed-top</kbd> into the first div class.
 
-        <!--Nav Begins Here-->
-        <div class="navbar navbar-default" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="topsecret.html">Example</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">Normal</a>
-                        </li>
-                        <li class="active"><a href="#">Normal</a>
-                        </li>
-                        <li class="disabled"><a href="#">Disabled</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">1</a>
-                                </li>
-                                <li><a href="#">2</a>
-                                </li>
-                                <li><a href="#">3</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li class="dropdown-header">Header</li>
-                                <li><a href="#">1</a>
-                                </li>
-                                <li><a href="#">2</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#">Right</a>
-                        </li>
-                        <!--<li>
+            <!--Nav Begins Here-->
+            <div class="navbar navbar-default" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="topsecret.html">Example</a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="#">Normal</a>
+                            </li>
+                            <li class="active"><a href="#">Active</a>
+                            </li>
+                            <li class="disabled"><a href="#">Disabled</a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">1</a>
+                                    </li>
+                                    <li><a href="#">2</a>
+                                    </li>
+                                    <li><a href="#">3</a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Header</li>
+                                    <li><a href="#">1</a>
+                                    </li>
+                                    <li><a href="#">2</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="#">Right</a>
+                            </li>
+                            <!--<li>
                         <a href="#"></a>
                     </li>
                         <li><a href="#">Right</a>
                         </li>-->
-                    </ul>
+                        </ul>
+                    </div>
+                    <!--/.nav-collapse -->
                 </div>
-                <!--/.nav-collapse -->
             </div>
+            <!--Nav ends here-->
+            <br>Also, copy the most current UniNav code which will always be on the first page. It is also good measure to add a line break after UniNav
+            <hr>
+            <h3>NoCSS</h3>
+            My CSS Docs are equipped with NoCSS coding. To have this, just ensure you have the CSS Doc <kbd>bootstrap.min.css</kbd> declared. Then add a p with the class NoCSS that will display a message when the CSS does not load.
+            <hr>
+            <h3>Using my CSS</h3>
+            All of my CSS will be at <kbd>css/{css file}</kbd>. When editing your code, ensure you have these going to the right place.
+            <span class="label label-warning"><strong>Warning</strong> |  Never link to CSS like this: stormyjet.com/css/{cssfile}. It increases load times.</span>
+        </p>
+        <hr>
+        <div class="page-header">
+            <h3>Submissions</h3>
         </div>
-        <!--Nav ends here-->
-        <br>Also, copy the most current UniNav code which will always be on the first page. It is also good measure to add a line break after UniNav
-        <hr>
-        <h3>NoCSS</h3>
-        My CSS Docs are equipped with NoCSS coding. To have this, just ensure you have the CSS Doc <kbd>bootstrap.min.css</kbd> declared.
-        <hr>
-        <h3>Using my CSS</h3>
-        All of my CSS will be at <kbd>css/{css file}</kbd>. When editing your code, ensure you have these going to the right place.
-        <span class="label label-warning"><strong>Warning</strong> |  Never link to CSS like this: stormyjet.com/css/{cssfile}. It increases load times.</span>
-    </p>
-    <hr>
-    <div class="page-header">
-        <h3>Submissions</h3>
-    </div>
-    <p>Yay! You finally finished editing your code and you are ready for it to be reviewed (and maybe accepted!). But wait, where do you go to do that
-        <br>Step 1: Go to <a href="https://github.com/stormyjet/stormyjet.github.io/issues/new">this page.</a>
-        <br>2: Paste in all of your code
-        <br>3: Mark it with these labels: <kbd>code</kbd>  <kbd>enhancement</kbd> and if your code fixes a bug, tag it with <kbd>bug</kbd>
-        <br>4: Title it appropiatley
-        <br>5: Submit!
-        <br>
+        <p>Yay! You finally finished editing your code and you are ready for it to be reviewed (and maybe accepted!). But wait, where do you go to do that
+            <br>Step 1: Go to <a href="https://github.com/stormyjet/stormyjet.github.io/issues/new">this page.</a>
+            <br>2: Paste in all of your code
+            <br>3: Mark it with these labels: <kbd>code</kbd>  <kbd>enhancement</kbd> and if your code fixes a bug, tag it with <kbd>bug</kbd>
+            <br>4: Title it appropiatley
+            <br>5: Submit!
+            <br>
 
-    </p>
-    <h4>Thanks for helping to make this site a better place!</h4>
+        </p>
+        <h4>Thanks for helping to make this site a better place!</h4>
 
 
 
-    <!-- Bootstrap core JavaScript
+        <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
-    </script>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script>
+            window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
+        </script>
 
-    <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
 
-    <script src="js/main.js"></script>
+        <script src="js/main.js"></script>
 
-    <script>
-        var _gaq = [
-            ['_setAccount', 'UA-XXXXX-X'],
-            ['_trackPageview']
-        ];
-        (function(d, t) {
-            var g = d.createElement(t),
-                s = d.getElementsByTagName(t)[0];
-            g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g, s)
-        }(document, 'script'));
-    </script>
+        <script>
+            var _gaq = [
+                ['_setAccount', 'UA-XXXXX-X'],
+                ['_trackPageview']
+            ];
+            (function(d, t) {
+                var g = d.createElement(t),
+                    s = d.getElementsByTagName(t)[0];
+                g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
+                s.parentNode.insertBefore(g, s)
+            }(document, 'script'));
+        </script>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
