add sNet, i didnt forget :/

--- a/blog.html
+++ b/blog.html
@@ -107,10 +107,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <a href="#"></a>
-                    </li>
-                    <li>
-                        <a href="#"></a>
                     </li>-->
+                    <li>
+                        <a href="http://stormyjet.com/sNet">sNet</a>
+                    </li>
                     <li><a href="MeteorGame/index.html">Meteor Game</a>
                     </li>
                 </ul>
