--- a/MeteorGame/index.html
+++ b/MeteorGame/index.html
@@ -83,10 +83,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <a href="#"></a>
-                    </li>
-                    <li>
-                        <a href="#"></a>
                     </li>-->
+                    <li>
+                        <a href="http://stormyjet.com/sNet">sNet</a>
+                    </li>
                     <li class="active"><a href="#">Meteor Game</a>
                     </li>
                 </ul>
