--- a/open.html
+++ b/open.html
@@ -111,12 +111,12 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <!--<li>
-                        <a href="#"></a>
-                    </li>-->
-                    <li>
-                        <a href="http://stormyjet.com/sNet">sNet</a>
-                    </li>
+                <li>
+                    <p class="navbar-text navbar-right">Other Things</p>
+                </li>
+                <li>
+                    <a href="http://stormyjet.com/sNet">sNet</a>
+                </li>
                 <li><a href="MeteorGame/index.html">Meteor Game</a>
                 </li>
             </ul>
