--- a/blog.html
+++ b/blog.html
@@ -105,9 +105,9 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <!--<li>
-                        <a href="#"></a>
-                    </li>-->
+                    <li>
+                        <p class="navbar-text navbar-right">Other Things</p>
+                    </li>
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>
