--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
     </noscript>
     <!--Nav Begins Here-->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
