--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>  <span class="badge">Maintainence Mode</span>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -135,9 +135,9 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                    <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>
