--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>  <span class="badge">Maintainence Mode</span>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
+                <p class="navbar-text"> <span class="badge">Maintainence Mode</span>
+                </p>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
