--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
-                <p class="navbar-text"> <span class="badge">Maintainence Mode</span>
+                <p class="navbar-text"> <span class="label label-warning">Maintenance Mode</span>
                 </p>
             </div>
             <div class="navbar-collapse collapse">
