i find it kinda funny

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                         </ul>
                     </li>
                 </ul>
-                <p class="navbar-text"> <span class="label label-warning">Maintenance Mode</span>
-                </p>
+                <h3 class="navbar-text"> <span class="label label-warning">Maintenance Mode</span>
+                </h3>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
