the dreams of which im dying are the best ive ever had

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </ul>
                     </li>
                 </ul>
-                <h4 class="navbar-text"> <span class="label label-warning">Maintenance Mode</span>
+                <h4 class="navbar-text"> <span class="label label-info">Maintenance Mode</span>
                 </h4>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
