updates decide ur fait

--- a/aprilfools.html
+++ b/aprilfools.html
@@ -1,7 +1,7 @@
 <html>
 <style>
     html {
-        background-color: blue;
+        background-color: red;
         text-decoration-color: white;
 </style>
 <center>
