--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a><small class="navbar=text">Beta</small>
 
             </div>
             <div class="navbar-collapse collapse">
