--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a><small class="navbar=text">Beta</small>
+                <div class="page-header"><a class="navbar-brand" href="topsecret.html">Stormy's Website</a><small class="navbar-text">Beta</small>
+                </div>
 
             </div>
             <div class="navbar-collapse collapse">
