--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <div class="page-header"><a class="navbar-brand" href="topsecret.html">Stormy's Website</a><small class="navbar-text">Beta</small>
-                </div>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website  β</a>
+
 
             </div>
             <div class="navbar-collapse collapse">
