--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website  β</a>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website</a>
+                <p class="navbar-text"> <span class="badge">Beta</span>
+                </p>
 
 
             </div>
@@ -136,7 +138,7 @@
                         </ul>
                     </li>
                 </ul>
-                <h4 class="navbar-text"> <span class="label label-info">Maintenance Mode</span>
+                <h4 class="navbar-text"> <span class="badge">Beta</span>
                 </h4>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
