we dont need no goat

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website <p class="navbar-text"> <span class="badge">Beta</span>
-                </p></a>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website <span class="badge">Beta</span>
+                </a>
 
 
             </div>
