--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     document.getElementById('candy').innerHTML = randomLine;
                 };
                  //were grabbing the candies from here.
-                request.open('GET', 'http://stormyjet.com/indexcandy.txt', true);
+                request.open('GET', 'indexcandy.txt', true);
                 request.send();
             </script>
 
@@ -210,11 +210,12 @@
                     </p>
                 </div>
                 <div class="col-lg-4 ">
-                    <h2>MCFS</h2>
-                    <p class="text-danger ">Update: April Fools :)</p>
-                    <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia</p>
-                    <p><a class="btn btn-primary " href="http://mcfs.github.io " role="button ">View details &raquo;</a>
-                    </p>
+                    <h2>Hiring</h2>
+
+                    <p>You can contact me at <kbd>business at this domain dot com</kbd> and we can work things out if you ever need a crappy website like this one.
+                        <p>
+
+                        </p>
                 </div>
                 <div class="col-lg-4 ">
                     <h2>Blog</h2>
