--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
                 <div class="col-lg-4 ">
                     <h2>Hiring</h2>
 
-                    <p>You can contact me at <kbd>business at this domain dot com</kbd> and we can work things out if you ever need a crappy website like this one.
+                    <p>You can contact me at
+                        <br>
+                        <kbd>business 'at' this domain</kbd>
+                        <br>and we can work things out if you ever need a crappy website like this one.
                         <p>
 
                         </p>
