--- a/cancer.html
+++ b/cancer.html
@@ -79,6 +79,13 @@
 
                     <div class="masthead clearfix">
                         <div class="inner">
+                            <noscript>
+                                <h1>Hey! Javascript is required for this site. You can still enter symptoms but the page will NEVER LOAD!</h1>
+                                <br>
+                                <h2>Also it will never load anything on the last page :(</h2>
+                                <br>
+                                <h3>Pls enable JS?</h3>
+                            </noscript>
                             <center>
                                 <h2>Online Cancer Checker</h2>
                                 <h4>Fast, simple, and free</h4>
