--- a/NubOrNot.html
+++ b/NubOrNot.html
@@ -9,7 +9,8 @@
 
 <body>
     <center>
-        <p class="matt">Yeah, you're a nub. You Nub.</p>
+        <p class="matt">Yeah, you're a nub.
+            <br>You Nub.</p>
     </center>
 </body>
 
