--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
                     <a href="cancer.html">The free online cancer checker</a>
                     <br>
                     <a href="pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
+                    <br>
+                    <a href="NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
+                    <br>
+                    <a href="YourMom.html">And the Your Mom Joke Maker</a>
+                    <br>
                     <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
                     <br>
                 </p>
