--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <br>
                     <a href="NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
                     <br>
-                    <a href="YourMom.html">And the Your Mom Joke Maker</a>
+                    <a href="YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
                     <br>
                     <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
                     <br>
