--- a/open.html
+++ b/open.html
@@ -111,9 +111,9 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <!--<li>
                     <p class="navbar-text navbar-right">Other Things</p>
-                </li>
+                </li>-->
                 <li>
                     <a href="http://stormyjet.com/sNet">sNet</a>
                 </li>
@@ -168,8 +168,8 @@
         </div>
         <h3>Using UniNav</h3>
         <br>
-        <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>justified-nav.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
-            <br>For this example to work correctly, some things were removed, if getting nav from here, make sure you add <kbd>navbar-fixed-top</kbd> into the first div class.
+        <p>UniNav is generally a thing that will Break Immersion. (see: sNet page) Generally inserting the css <kbd>bootstrap.min.css</kbd> and just pasting the code will work well. UniNav links have three states, Normal, Active, and Disabled.
+            <br>For this example to work correctly, some things were removed, if you're getting the nav code from here, make sure you add <kbd>navbar-fixed-top</kbd> into the first div class.
 
             <!--Nav Begins Here-->
             <div class="navbar navbar-default" role="navigation">
